--- a/blog-details.html
+++ b/blog-details.html
@@ -15,7 +15,7 @@
         rel="stylesheet">
 
     <!-- RemixIcon -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" rel="stylesheet">
 
     <!-- AOS Animation Library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -27,7 +27,9 @@
     <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
+    <!-- Reading Progress Bar -->
+    <div class="reading-progress"></div>
     <!-- Loading Screen -->
     <div id="loader">
         <div class="loader-content">
@@ -46,7 +48,7 @@
                 <a href="boutique.html">Boutique</a>
                 <a href="blog.html">Blog</a>
 
-                <a href="index.html#contact" class="btn-primary">Contact</a>
+                <a href="index.html#contact-form-section" class="btn-primary">Contact</a>
             </div>
             <div class="mobile-menu-btn">
                 <i class="ri-menu-4-line"></i>
@@ -75,7 +77,7 @@
                 <h3>Contact</h3>
                 <p><i class="ri-map-pin-line"></i> Ouagadougou, Burkina Faso</p>
                 <p><i class="ri-phone-line"></i> +226 77 97 39 58</p>
-                <p><i class="ri-mail-line"></i> contact@olivsfresh.com</p>
+                <p><i class="ri-mail-line"></i> oliviagouba@gmail.com</p>
             </div>
             <div class="footer-col">
                 <h3>Liens Rapides</h3>
