--- a/blog-details.html
+++ b/blog-details.html
@@ -57,7 +57,7 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="container" style="padding-top: 150px; padding-bottom: 5rem;" id="blog-post-content">
+    <main class="container" style="padding-top: 200px; padding-bottom: 5rem;" id="blog-post-content">
         <div class="loading-spinner">Chargement de l'article...</div>
     </main>
 
@@ -65,7 +65,7 @@
     <footer id="contact">
         <div class="container footer-content">
             <div class="footer-col">
-                <h3>Oliv's Fresh</h3>
+                <img src="img/oli_logo.png" alt="Oliv's Fresh Logo" width="180" style="margin-bottom: 1.5rem;">
                 <p>Votre partenaire fraîcheur au quotidien.</p>
                 <div class="social-links">
                     <a href="#"><i class="ri-facebook-fill"></i></a>
