--- a/boutique.html
+++ b/boutique.html
@@ -40,7 +40,7 @@
     <nav class="navbar">
         <div class="container nav-content">
             <a href="index.html" class="logo">
-                <img src="img/oli_logo.png" alt="Oliv's Fresh - Retour Accueil" width="150" height="45">
+                <img src="img/oli_logo.png" alt="Oliv's Fresh - Retour Accueil">
             </a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="section" style="padding-top: 120px; padding-bottom: 2rem; background-color: var(--bg-off-white);">
+    <section class="section" style="padding-top: 200px; padding-bottom: 2rem; background-color: var(--bg-off-white);">
         <div class="container text-center">
             <h1 data-aos="fade-down">La Boutique</h1>
             <p data-aos="fade-up" data-aos-delay="100">Faites votre marché en ligne.</p>
@@ -85,6 +85,8 @@
                 <button class="filter-btn" data-filter="aromatic"><i class="ri-leaf-line"></i> Épices</button>
                 <button class="filter-btn" data-filter="tuber"><i class="ri-hard-drive-line"></i> Tubercules</button>
                 <button class="filter-btn" data-filter="processed"><i class="ri-cup-line"></i> Jus & Découpés</button>
+                <button class="filter-btn" data-filter="subscription"><i class="ri-shopping-basket-line"></i>
+                    Paniers</button>
             </div>
 
             <div class="products-grid" id="products-container">
@@ -132,7 +134,7 @@
     <footer id="contact">
         <div class="container footer-content">
             <div class="footer-col">
-                <h3>Oliv's Fresh</h3>
+                <img src="img/oli_logo.png" alt="Oliv's Fresh Logo" width="180" style="margin-bottom: 1.5rem;">
                 <p>Votre partenaire fraîcheur au quotidien.</p>
                 <div class="social-links">
                     <a href="#"><i class="ri-facebook-fill"></i></a>
