--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
     <nav class="navbar">
         <div class="container nav-content">
             <a href="index.html" class="logo">
-                <img src="img/oli_logo.png" alt="Oliv's Fresh - Retour Accueil" width="150" height="45">
+                <img src="img/oli_logo.png" alt="Oliv's Fresh - Retour Accueil">
             </a>
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
@@ -57,7 +57,7 @@
     </nav>
 
     <!-- Page Header -->
-    <section class="section" style="padding-top: 120px; padding-bottom: 2rem; background-color: var(--bg-off-white);">
+    <section class="section" style="padding-top: 200px; padding-bottom: 2rem; background-color: var(--bg-off-white);">
         <div class="container text-center">
             <h1 data-aos="fade-down">Le Blog Fraîcheur</h1>
             <p data-aos="fade-up" data-aos-delay="100">Découvrez nos dernières recettes, astuces santé et actualités.
@@ -78,7 +78,7 @@
     <footer id="contact">
         <div class="container footer-content">
             <div class="footer-col">
-                <h3>Oliv's Fresh</h3>
+                <img src="img/oli_logo.png" alt="Oliv's Fresh Logo" width="180" style="margin-bottom: 1.5rem;">
                 <p>Votre partenaire fraîcheur au quotidien.</p>
                 <div class="social-links">
                     <a href="#"><i class="ri-facebook-fill"></i></a>
