--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
     </div> <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-content">
-            <a href="#" class="logo">
-                <img src="img/oli_logo.png" alt="Oliv's Fresh - Logo Fraîcheur" width="150" height="45">
+            <a href="index.html" class="logo">
+                <img src="img/oli_logo.png" alt="Oliv's Fresh - Logo Fraîcheur">
             </a>
             <div class="nav-links">
                 <a href="#accueil" class="active">Accueil</a>
                 <a href="boutique.html">Boutique</a>
+                <a href="#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
                 <a href="#contact-form-section" class="btn-primary">Contact</a>
             </div>
@@ -111,7 +112,100 @@
                 </div>
             </div>
         </div>
-    </section> <!-- How to Order Section -->
+    </section>
+
+    <!-- Subscription Section (Inspired by Potager City) -->
+    <section id="abonnements" class="section subscription-section">
+        <div class="container">
+            <div class="section-header" data-aos="fade-up">
+                <h2>Nos Formules d'Abonnement</h2>
+                <p>Recevez chaque semaine le meilleur de la récolte, sans engagement.</p>
+            </div>
+
+            <div class="pricing-grid">
+                <!-- Plan 1 -->
+                <div class="pricing-card" data-aos="fade-up" data-aos-delay="0">
+                    <h3>Le Petit Panier</h3>
+                    <p>Idéal pour 1 à 2 personnes</p>
+                    <div class="price">7 500<span>/semaine</span></div>
+                    <ul>
+                        <li><i class="ri-check-line"></i> 3-4 kg de fruits & légumes</li>
+                        <li><i class="ri-check-line"></i> 5 variétés de saison</li>
+                        <li><i class="ri-check-line"></i> Fiche recette incluse</li>
+                        <li><i class="ri-check-line"></i> Sans engagement</li>
+                    </ul>
+                    <a href="https://wa.me/22677973958?text=Je+souhaite+m'abonner+au+Petit+Panier" class="btn-secondary"
+                        style="width: 100%;">S'abonner</a>
+                </div>
+
+                <!-- Plan 2 -->
+                <div class="pricing-card featured" data-aos="fade-up" data-aos-delay="100">
+                    <h3>Le Panier Famille</h3>
+                    <p>Idéal pour 3 à 5 personnes</p>
+                    <div class="price">12 500<span>/semaine</span></div>
+                    <ul>
+                        <li><i class="ri-check-line"></i> 6-8 kg de fruits & légumes</li>
+                        <li><i class="ri-check-line"></i> 8-10 variétés de saison</li>
+                        <li><i class="ri-check-line"></i> Œufs frais offerts (x6)</li>
+                        <li><i class="ri-check-line"></i> Sans engagement</li>
+                    </ul>
+                    <a href="https://wa.me/22677973958?text=Je+souhaite+m'abonner+au+Panier+Famille" class="btn-primary"
+                        style="width: 100%;">S'abonner</a>
+                </div>
+
+                <!-- Plan 3 -->
+                <div class="pricing-card" data-aos="fade-up" data-aos-delay="200">
+                    <h3>Le Panier Bureau</h3>
+                    <p>Pour vos collaborateurs</p>
+                    <div class="price">15 000<span>/semaine</span></div>
+                    <ul>
+                        <li><i class="ri-check-line"></i> 10 kg de fruits de saison</li>
+                        <li><i class="ri-check-line"></i> Prêt à consommer</li>
+                        <li><i class="ri-check-line"></i> Booster d'énergie</li>
+                        <li><i class="ri-check-line"></i> Livraison entreprise</li>
+                    </ul>
+                    <a href="https://wa.me/22677973958?text=Je+souhaite+plus+d'infos+sur+le+Panier+Bureau"
+                        class="btn-secondary" style="width: 100%;">Contactez-nous</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Relay Points Section -->
+    <section class="section">
+        <div class="container">
+            <div class="section-header" data-aos="fade-up">
+                <h2>Points de Retrait & Livraison</h2>
+                <p>Récupérez vos produits près de chez vous ou faites-vous livrer.</p>
+            </div>
+
+            <div class="relay-grid">
+                <div class="relay-card" data-aos="fade-up">
+                    <i class="ri-store-2-line"></i>
+                    <div>
+                        <h4>Relais Ouaga 2000</h4>
+                        <p>Boulangerie Élite - Mar-Ven 16h-19h</p>
+                    </div>
+                </div>
+                <div class="relay-card" data-aos="fade-up" data-aos-delay="100">
+                    <i class="ri-shopping-bag-line"></i>
+                    <div>
+                        <h4>Relais Somgandé</h4>
+                        <p>Kiosque Oliv's - Mer-Sam 08h-12h</p>
+                    </div>
+                </div>
+                <div class="relay-card" data-aos="fade-up" data-aos-delay="200">
+                    <i class="ri-e-bike-2-line"></i>
+                    <div>
+                        <h4>Livraison à Domicile</h4>
+                        <p>Directement chez vous sous 24h</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- How to Order Section -->
     <section class="section">
         <div class="container">
             <div class="section-header" data-aos="fade-up">
@@ -234,7 +328,7 @@
     <footer id="contact">
         <div class="container footer-content">
             <div class="footer-col">
-                <h3>Oliv's Fresh</h3>
+                <img src="img/oli_logo.png" alt="Oliv's Fresh Logo" width="180" style="margin-bottom: 1.5rem;">
                 <p>Votre partenaire fraîcheur au quotidien.</p>
                 <div class="social-links">
                     <a href="#"><i class="ri-facebook-fill"></i></a>
