--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
         </div>
     </section>
 
+    <!-- Anti-Gaspi Section -->
+    <section class="section" id="antigaspi-section" style="background-color: #fff9f0;">
+        <div class="container">
+            <div class="section-header" data-aos="fade-up">
+                <h2 style="color: #e67e22;"><i class="ri-leaf-line"></i> Le Coin Anti-Gaspi</h2>
+                <p>Sauvez ces délicieux produits et profitez de prix réduits ! Un geste pour la planète et votre
+                    portefeuille.</p>
+            </div>
+            <div class="product-grid" id="antigaspi-container">
+                <!-- JS Injection -->
+            </div>
+        </div>
+    </section>
+
     <!-- Subscription Section (Inspired by Potager City) -->
     <section id="abonnements" class="section subscription-section">
         <div class="container">
@@ -188,13 +202,6 @@
                     </div>
                 </div>
                 <div class="relay-card" data-aos="fade-up" data-aos-delay="100">
-                    <i class="ri-shopping-bag-line"></i>
-                    <div>
-                        <h4>Relais Somgandé</h4>
-                        <p>Kiosque Oliv's - Mer-Sam 08h-12h</p>
-                    </div>
-                </div>
-                <div class="relay-card" data-aos="fade-up" data-aos-delay="200">
                     <i class="ri-e-bike-2-line"></i>
                     <div>
                         <h4>Livraison à Domicile</h4>
