--- a/blog.html
+++ b/blog.html
@@ -4,8 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - Oliv's Fresh</title>
-    <meta name="description" content="Conseils, recettes et astuces sur les fruits et légumes.">
+    <title>Blog Oliv's Fresh | Conseils Santé & Recettes Bio</title>
+    <meta name="description"
+        content="Découvrez nos astuces pour mieux manger, nos recettes à base de produits locaux et nos conseils pour booster votre immunité naturellement.">
+    <meta name="keywords"
+        content="blog santé Burkina, recettes africaines bio, manger frais Ouagadougou, nutrition Burkina, conseils bien-être Faso">
+    <link rel="canonical" href="./blog.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="./blog.html">
+    <meta property="og:title" content="Blog Oliv's Fresh | Votre guide pour une vie saine">
+    <meta property="og:description"
+        content="Recettes, conseils et astuces pour profiter au mieux des produits de notre terroir.">
+    <meta property="og:image" content="img/oli_logo.png">
+
+    <!-- Structured Data - Schema.org for Blog -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Blog",
+      "name": "Blog Oliv's Fresh",
+      "description": "Conseils et recettes pour une alimentation saine.",
+      "url": "./blog.html"
+    }
+    </script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +44,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.2">
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png" type="image/png">
@@ -46,6 +69,7 @@
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
                 <a href="boutique.html">Boutique</a>
+                <a href="index.html#abonnements">Abonnements</a>
                 <a href="blog.html" class="active">Blog</a>
 
                 <a href="index.html#contact-form-section" class="btn-primary">Contact</a>
@@ -90,12 +114,13 @@
                 <h3>Contact</h3>
                 <p><i class="ri-map-pin-line"></i> Ouagadougou, Burkina Faso</p>
                 <p><i class="ri-phone-line"></i> +226 77 97 39 58</p>
-                <p><i class="ri-mail-line"></i> oliviagouba@gmail.com</p>
+                <p><i class="ri-mail-line"></i> joycegouba@gmail.com</p>
             </div>
             <div class="footer-col">
                 <h3>Liens Rapides</h3>
                 <a href="index.html">Accueil</a>
                 <a href="boutique.html">Boutique</a>
+                <a href="index.html#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
             </div>
         </div>
@@ -117,7 +142,7 @@
 
     <!-- App Initialization -->
     <script src="js/firebase-init.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js?v=1.2"></script>
 </body>
 
 </html>
