--- a/blog-details.html
+++ b/blog-details.html
@@ -21,7 +21,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.2">
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png" type="image/png">
@@ -46,6 +46,7 @@
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
                 <a href="boutique.html">Boutique</a>
+                <a href="index.html#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
 
                 <a href="index.html#contact-form-section" class="btn-primary">Contact</a>
@@ -77,12 +78,13 @@
                 <h3>Contact</h3>
                 <p><i class="ri-map-pin-line"></i> Ouagadougou, Burkina Faso</p>
                 <p><i class="ri-phone-line"></i> +226 77 97 39 58</p>
-                <p><i class="ri-mail-line"></i> oliviagouba@gmail.com</p>
+                <p><i class="ri-mail-line"></i> joycegouba@gmail.com</p>
             </div>
             <div class="footer-col">
                 <h3>Liens Rapides</h3>
                 <a href="index.html">Accueil</a>
                 <a href="boutique.html">Boutique</a>
+                <a href="index.html#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
             </div>
         </div>
@@ -111,7 +113,7 @@
     <!-- App Initialization -->
     <script src="js/firebase-init.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js?v=1.2"></script>
 </body>
 
 </html>
