--- a/boutique.html
+++ b/boutique.html
@@ -4,8 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boutique - Fruits & Légumes Frais | Oliv's Fresh</title>
-    <meta name="description" content="Catalogue complet de fruits et légumes frais. Commandez en ligne.">
+    <title>Boutique Oliv's Fresh | Achetez fruits et légumes en ligne à Ouagadougou</title>
+    <meta name="description"
+        content="Découvrez notre boutique en ligne : mangues, avocats, tomates, paniers hebdo et plus. Qualité supérieure, livraison rapide à domicile à Ouagadougou.">
+    <meta name="keywords"
+        content="boutique fruits Ouagadougou, légumes en ligne Burkina, prix légumes Faso, panier légumes hebdo, olivsfresh boutique">
+    <link rel="canonical" href="./boutique.html">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="./boutique.html">
+    <meta property="og:title" content="Boutique Oliv's Fresh | Le meilleur du terroir livré chez vous">
+    <meta property="og:description" content="Faites votre marché en ligne et recevez le meilleur de la fraîcheur.">
+    <meta property="og:image" content="img/oli_logo.png">
+
+    <!-- Structured Data - Schema.org for CollectionPage -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "Boutique Oliv's Fresh",
+      "description": "Plateforme de vente de produits frais locaux.",
+      "url": "./boutique.html"
+    }
+    </script>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,13 +36,14 @@
         href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&family=Playfair+Display:ital,wght@0,600;1,600&display=swap"
         rel="stylesheet">
 
+    <!-- RemixIcon -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css" rel="stylesheet">
 
     <!-- AOS Animation Library -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css?v=1.2">
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png" type="image/png">
@@ -45,6 +68,7 @@
             <div class="nav-links">
                 <a href="index.html">Accueil</a>
                 <a href="boutique.html" class="active">Boutique</a>
+                <a href="index.html#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
 
                 <a href="index.html#contact-form-section" class="btn-primary">Contact</a>
@@ -146,12 +170,13 @@
                 <h3>Contact</h3>
                 <p><i class="ri-map-pin-line"></i> Ouagadougou, Burkina Faso</p>
                 <p><i class="ri-phone-line"></i> +226 77 97 39 58</p>
-                <p><i class="ri-mail-line"></i> oliviagouba@gmail.com</p>
+                <p><i class="ri-mail-line"></i> joycegouba@gmail.com</p>
             </div>
             <div class="footer-col">
                 <h3>Liens Rapides</h3>
                 <a href="index.html">Accueil</a>
                 <a href="boutique.html">Boutique</a>
+                <a href="index.html#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
             </div>
         </div>
@@ -198,7 +223,7 @@
     <!-- App Initialization -->
     <script src="js/firebase-init.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.js?v=1.2"></script>
 </body>
 
 </html>
