--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css?v=1.2">
+    <link rel="stylesheet" href="css/style.css?v=2.2">
 
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png" type="image/png">
@@ -118,9 +118,9 @@
             </div>
             <div class="footer-col">
                 <h3>Liens Rapides</h3>
-                <a href="index.html">Accueil</a>
+                <a href="./">Accueil</a>
                 <a href="boutique.html">Boutique</a>
-                <a href="index.html#abonnements">Abonnements</a>
+                <a href="./#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
             </div>
         </div>
@@ -142,7 +142,7 @@
 
     <!-- App Initialization -->
     <script src="js/firebase-init.js"></script>
-    <script src="js/script.js?v=1.2"></script>
+    <script src="js/script.js?v=2.2"></script>
 </body>
 
 </html>
