--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/style.css?v=1.2">
-
+    <link rel="stylesheet" href="css/style.css?v=2.2">
+    <script src="js/script.js?v=2.2"></script>
     <!-- Favicon -->
     <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
@@ -102,7 +102,7 @@
                 <img src="img/oli_logo.png" alt="Oliv's Fresh - Logo Fraîcheur">
             </a>
             <div class="nav-links">
-                <a href="#accueil" class="active">Accueil</a>
+                <a href="index.html" class="active">Accueil</a>
                 <a href="boutique.html">Boutique</a>
                 <a href="#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
@@ -141,8 +141,21 @@
                 <h2>Nos Incontournables</h2>
                 <p>Un avant-goût de nos produits les plus frais.</p>
             </div>
-            <div class="products-grid" id="featured-products-container">
-                <div class="loading-spinner">Chargement...</div>
+            <div class="featured-slider-wrapper">
+                <div class="slider-nav">
+                    <button class="nav-btn prev" onclick="window.slideFeatured(-1)"><i
+                            class="ri-arrow-left-s-line"></i></button>
+                    <button class="nav-btn next" onclick="window.slideFeatured(1)"><i
+                            class="ri-arrow-right-s-line"></i></button>
+                </div>
+                <div class="featured-scroll-container">
+                    <div class="featured-products-grid" id="featured-products-container">
+                        <div class="loading-spinner">Chargement...</div>
+                    </div>
+                </div>
+                <div class="slider-dots" id="featured-dots">
+                    <!-- Dots injected by JS -->
+                </div>
             </div>
             <div style="text-align: center; margin-top: 3rem;" data-aos="fade-up" data-aos-delay="200">
                 <a href="boutique.html" class="btn-primary">Visiter la Boutique <i class="ri-arrow-right-line"></i></a>
@@ -414,14 +427,14 @@
             </div>
             <div class="footer-col">
                 <h3>Liens Rapides</h3>
-                <a href="#accueil">Accueil</a>
+                <a href="index.html">Accueil</a>
                 <a href="boutique.html">Boutique</a>
                 <a href="#abonnements">Abonnements</a>
                 <a href="blog.html">Blog</a>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2026 Oliv's Fresh. Tous droits réservés.</p>
+            <p>&copy; 2026 Oliv's Fresh. v2.2. Tous droits réservés.</p>
         </div>
     </footer> <!-- Floating Cart & WhatsApp -->
     <div class="floating-actions">
